<resources>
    <string name="app_name">Schichten NB Verden</string>
    <string name="frueh">Früh</string>
    <string name="spaet">Spät</string>
    <string name="nacht">Nacht</string>
    <string name="frueh_nacht">Früh/Nacht</string>
    <string name="langer_tag">Langer Tag</string>
    <string name="lange_nacht">Lange Nacht</string>
    <string name="linsburg">Linsburg</string>
    <string name="nienburg">Nienburg</string>
    <string name="rohrsen">Rohrsen</string>
    <string name="eystrup">Eystrup</string>
    <string name="d_rverden">Dörverden</string>
    <string name="verden">Verden</string>
    <string name="eintragen">Eintragen</string>
    <string name="error">Irgendwas ging schief</string>
    <string name="title_activity_einstellung">EinstellungActivity</string>
    <string name="einstellung">Einstellung</string>
    <string name="einstellung_verwerfen">Änderung verworfen</string>
    <string name="einstellung_gespeichert">Änderung gespeichert</string>
    <string name="termin_titel">Termin Titel</string>
    <string name="schicht_stellwerk">Schicht/Stellwerk</string>
    <string name="stellwerk_schicht">Stellwerk/Schicht</string>
    <string name="speichern">Speichern</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="setting">setting.cfg</string>
    <string name="reinfolge">Reinfolge</string>
    <string name="langwedel">Langwedel</string>
    <string name="achim">Achim</string>
    <string name="stellwerke_anzeigen">Stellwerke anzeigen</string>
    <string name="ueber">Über</string>
    <string name="letztesStellwerk">letztes Stellwerk</string>
    <string name="keinStellwerkDialog">Sie haben alle Stellwerke ausgeblendet</string>
    <string name="viel_spa_mit_der_app">Viel Spaß mit der App\nFalls jemand Verbesserungsvorschläge\noder Interesse am Quellcode hat,\ndann einfach bei mir melden.\n\n euer Jörg Dittmar </string>
    <string name="info">Info</string>
</resources>